--- a/preprocess_config.yaml
+++ b/preprocess_config.yaml
@@ -1,10 +1,9 @@
 default: &DEFAULT 
-  data_dir: '../../Data/INbreast-pytorch/'
-  patches_dir: '../../Data/INbreast-patches-512-split20-png-temp2/'
-  target_csv: 'csv.csv' 
-  train_csv: 'train_by_patient_20.csv' 
-  val_csv:  'val_by_patient_20.csv' 
-  mask_col: 'mask_image_filled'
+  data_dir: './data/'
+  patches_dir: './data/patches/'
+  train_csv: 'train.csv' 
+  val_csv:  'val.csv' 
+  mask_col: 'mask_image'
   kernel_size: 512
   stride: 480
   num_workers: 8
