--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ data/
 # Jupyter NB Checkpoints
 .ipynb_checkpoints/
 
+# Models
+*.pth
+*.tar
 
 # Mac OS-specific storage files
 .DS_Store
+
+# Other
+__pycache__/
+pipeline.sh
